backend/api/tests/integration/snapshots/integration__resource__browse_order_by-3.snap
---
source: tests/integration/resource.rs
expression: body
---
{
  "resources": [
    {
      "id": "d8067526-1518-11ed-87fa-ebaf880b6d9c",
      "publishedAt": "2022-06-24T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "views": 0,
      "liveUpToDate": false,
      "isLiked": false,
      "resourceData": {
        "draftOrLive": "draft",
        "displayName": "resource1",
        "cover": {
          "id": "cfe8fd74-151c-11ed-b60c-6ba2ae5b9011",
          "kind": "Cover",
          "is_complete": false
        },
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "description": "test description",
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "2021-03-04T00:46:26.134651Z",
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "additionalResources": [
          {
            "id": "286b834a-1dd9-11ec-8426-6f641a50e23f",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/urls/s"
          },
          {
            "id": "286b8390-1dd9-11ec-8426-fbeb80c504d9",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/url/s"
          }
        ]
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "2f8d91d0-1519-11ed-87fa-eb1826fcf343",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "views": 0,
      "liveUpToDate": false,
      "isLiked": false,
      "resourceData": {
        "draftOrLive": "live",
        "displayName": "resource2",
        "cover": {
          "id": "e3378be8-151c-11ed-b60c-971f972f35d8",
          "kind": "Cover",
          "is_complete": true
        },
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "description": "test description",
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "2021-03-04T00:46:26.134651Z",
        "privacyLevel": "public",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "additionalResources": []
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "2f8d91d0-1519-11ed-87fa-eb1826fcf343",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "views": 0,
      "liveUpToDate": false,
      "isLiked": false,
      "resourceData": {
        "draftOrLive": "draft",
        "displayName": "resource2",
        "cover": {
          "id": "8fd39a64-151c-11ed-b60c-cf8efe275b73",
          "kind": "Cover",
          "is_complete": false
        },
        "ageRanges": [],
        "affiliations": [],
        "language": "he",
        "categories": [],
        "description": "draft test description",
        "createdAt": "2021-03-06T00:46:26.134651Z",
        "lastEdited": "2021-03-06T00:46:26.134651Z",
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "additionalResources": []
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "af827e00-1519-11ed-87fa-7b1aa26c85a8",
      "publishedAt": "2022-06-22T17:57:33.149359Z",
      "creatorId": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "authorId": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "authorName": "Post Gres",
      "likes": 1,
      "views": 0,
      "liveUpToDate": false,
      "isLiked": true,
      "resourceData": {
        "draftOrLive": "draft",
        "displayName": "resource3",
        "cover": {
          "id": "a6b24a88-1dd7-11ec-8426-57525d09b22c",
          "kind": "Cover",
          "is_complete": false
        },
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "description": "test description",
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "2021-03-04T00:46:26.134651Z",
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "additionalResources": []
      },
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    }
  ],
  "pages": 1,
  "totalResourceCount": 4
}
